# spectraglyph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyinstaller.spec  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: extract_changelog.py
.github/workflows/: ci.yml  release.yml
scripts/: generate_branding.py
src/spectraglyph/: __init__.py
src/spectraglyph/core/: audio_io.py  image_processor.py  spectrogram_renderer.py  text_renderer.py  watermark.py
src/spectraglyph/gui/: controls_panel.py  export_dialog.py  i18n.py  image_panel.py  long_audio_dialog.py  main_window.py  spectrogram_view.py
src/spectraglyph/utils/: config.py  github_release.py  worker.py
tests/: test_audio_io.py  test_github_release.py  test_spectrogram_patch.py  test_text_and_mask.py  test_watermark.py
